fix(components): fix FlipToast text container height/alignment

--- a/packages/swirl-components/src/components/flip-toast/flip-toast.css
+++ b/packages/swirl-components/src/components/flip-toast/flip-toast.css
@@ -46,6 +46,7 @@
   flex-grow: 1;
   line-height: var(--s-line-height-base);
   text-align: left;
+  align-self: flex-start;
 
   @media (--from-desktop-without-touch) {
     font-size: var(--s-font-size-sm);
